fixing dropdown z-index

--- a/css/app.css
+++ b/css/app.css
@@ -456,6 +456,7 @@ body.warm {
   border-radius: 1.4rem;
   -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
           box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  z-index: 999;
 }
 
 .dropdown-menu:before {
